--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pyodide": "^0.27.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "stream-browserify": "^3.0.0",
